...
            android:id="@+id/swipeviewlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone" >

            <!-- android:layout_above="@+id/likedislikelayout" -->

        </RelativeLayout>

        <!-- like and dislike layout -->

        <RelativeLayout
...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp">

            <!-- android:layout_alignParentBottom="true" -->

            <RelativeLayout
                android:id="@+id/dislikelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/infobuttonlaout" >

                <Button
                    android:id="@+id/dislikeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_dislike_button" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/likelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/infobuttonlaout" >

                <Button
                    android:id="@+id/likeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_like_button" />
            </RelativeLayout>

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" >

                <Button
                    android:id="@+id/matchedUserInfoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_info_button" />
            </RelativeLayout>
...
