<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navigation_bar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_layout"
        android:background="@drawable/navigation_bar"
        android:elevation="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/stainlessnavbar"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:id="@+id/activity_main_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor = "#FFFFFF"
                android:text="" />
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_below="@+id/toolbar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"
             />
        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/user_profile_photo"

            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/user_profile_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/profile_default"
            android:textColor="#fff"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/user_profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_gender"
            android:layout_centerHorizontal="true"
            android:text="@string/profile_default"
            android:textColor="#fff"
            android:textSize="14sp" />
        <Button
            android:text="Edit Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileButton"
            android:layout_below="@+id/user_profile_location"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="edit" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editProfileButton"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="false"
                android:text="About Me"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            <TextView
                android:id="@+id/profile_short_bio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/line"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:top = "2dp"
                android:text="@string/profile_default" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="false"
                android:text="Favorite Dish"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            <TextView
                android:id="@+id/profile_dish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/line"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/profile_default" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="false"
                android:text="Favorite Cuisine"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/profile_cuisine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/line"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/profile_default" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>