...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <RadioGroup
                android:id="@+id/preference_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/line">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/line">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cook"
                    android:text="Cook" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cleaner"
                    android:text="Cleaner" />
            </RadioGroup>


            <!-- show age layout -->

...
